Fix overflow css

--- a/src/ui/GoogleMaps.css
+++ b/src/ui/GoogleMaps.css
@@ -28,3 +28,6 @@
     top: -50px;
     position: absolute;
 }
+.widget-google-maps-overflow {
+    overflow: visible !important;
+}
